--- a/package.json
+++ b/package.json
@@ -4,11 +4,32 @@
   "description": "app",
   "main": "App.js",
   "dependencies": {
+    "eslint": "^7.14.0",
+    "eslint-config-node": "^4.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0"
   },
   "devDependencies": {
-    "@types/express-handlebars": "3.1.0"
+    "@types/eslint": "^7.2.5",
+    "@types/express": "^4.17.9",
+    "@types/express-handlebars": "^3.1.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.2"
+  },
+  "lint-staged": {
+    "*.{js, json}": [
+      "eslint",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "scripts": {
     "test": "test"
