--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "test": "test"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/romantrynko/node_lesson_2.git"
+    "type": "",
+    "url": ""
   },
   "author": "Roman",
   "license": "ISC",
