--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "eslint": "^7.14.0",
     "eslint-config-node": "^4.1.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0"
+    "express-handlebars": "^5.2.0",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.5",
@@ -20,13 +21,12 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.2"
   },
- 
   "scripts": {
     "test": "test"
   },
   "repository": {
-    "type": "",
-    "url": ""
+    "type": "git",
+    "url": "git+https://github.com/romantrynko/node_lesson_4.git"
   },
   "author": "Roman",
   "license": "ISC",
