--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eslint-config-node": "^4.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.5",
