--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "app",
   "main": "App.js",
   "dependencies": {
+    "@types/sequelize": "^4.28.9",
     "eslint": "^7.14.0",
     "eslint-config-node": "^4.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
-    "sequelize": "^6.3.5",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.5",
