--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "husky": "^4.3.0",
-    "lint-staged": "^10.5.2"
+    "lint-staged": "^10.5.2",
+    "@types/sequelize": "^4.28.9"
   },
   "scripts": {
     "test": "test"
