--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/joi": "^14.3.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/sequelize": "^4.28.9",
     "bcrypt": "^5.0.0",
     "eslint": "^7.14.0",
@@ -13,6 +14,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
