--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/sequelize": "^4.28.9",
     "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.14.0",
     "eslint-config-node": "^4.1.0",
     "express": "^4.17.1",
