--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/pug": "^2.0.4",
     "@types/sequelize": "^4.28.9",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
@@ -18,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.17",
+    "pug": "^3.0.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
