--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "App.js",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/email-templates": "^8.0.0",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/pug": "^2.0.4",
     "@types/sequelize": "^4.28.9",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
+    "email-templates": "^8.0.2",
     "eslint": "^7.14.0",
     "eslint-config-node": "^4.1.0",
     "express": "^4.17.1",
