--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-ACCESS_TOKEN = ''
-REFRESH_TOKEN = ''
-USERNAME = ''
-PASSWORD = ''
-HOST = ''
-DIALECT = ''
+ACCESS_TOKEN = '',
+REFRESH_TOKEN = '',
+USERNAME = '',
+PASSWORD = '',
+HOST = '',
+ROOT_EMAIL = '',
+ROOT_EMAIL_PASS = '',
+ROOT_EMAIL_SERVICE = ''
